Squash: fix-cicd-build-failure -> main

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,2 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
+
+.success-snackbar {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.error-snackbar {
+  background-color: #f44336;
+  color: white;
+}
